kube/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playlist-protector
spec:
  selector:
    matchLabels:
      app: playlist-protector
  replicas: 1
  template:
    metadata:
      labels:
        app: playlist-protector
    spec:
      containers:
      - image: rhysemmas/playlist-protector:arm32
        imagePullPolicy: Always
        name: protector
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
        ports:
        - name: callback-server
          containerPort: 8080
          protocol: TCP
