kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: playlist-protector
spec:
  ports:
    - name: server
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: playlist-protector
