kube/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: playlist-protector
spec:
  rules:
  - http:
      paths:
      - path: /spotify/callback
        backend:
          serviceName: playlist-protector
          servicePort: 80
